--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.8'
 
 services:
-  cap-theorem-sim:
+  cap-simulator:
     build: .
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
       - PORT=3000
-    restart: unless-stopped 
+    volumes:
+      - .:/app
+      - /app/node_modules
